# simple_shell

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  __getline.c  _getline.c  _pow_recursion.c  _printf.c  _putchar.c  _puts.c  _realloc.c  _strcat.c  _strcmp.c  _strcpy  _strdup.c  _strlen.c  _strncmp.c  add_input_history.c  add_input_string.c  add_node_list.c  change_directory.c  complete_path.c  copy_double_pointer.c  copy_string_index.c  echo.c  execute_command.c  execute_decision.c  exit_command.c  find_control.c  free_double_pointer.c  free_history.c  free_list.c  free_user_input_type.c  get_builtin_function.c  get_env_variable.c  help.c  history.c  input_array  main.c  main.h  (+20 more)
old_work/: _realloc.c  _strcmp.c  add_node_list.c  convert_to_argv.c  input_array.c  main.c  main.h  print_list.c  run_command.c
playground/: default_actions.c  main.h  scratch  scratch.c
